--- a/templates/customer/marketplace.html
+++ b/templates/customer/marketplace.html
@@ -3,7 +3,7 @@
 {% block scripts %}
     <link rel="stylesheet" href="/css/global/shop.css">
     <link rel="stylesheet" href="/css/pages/discover.css">
-    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <style>
         .center-gif {
             display: block;
