Fix show password js

--- a/templates/base.html
+++ b/templates/base.html
@@ -151,7 +151,7 @@
                 class="fas fa-times"></i>&ensp;Cancel</a>
     </div>
 </div>
-
+<script src="/js/signup.js"></script>
 </body>
 
 </html>
