--- a/templates/chat.html
+++ b/templates/chat.html
@@ -130,7 +130,7 @@
                                         {% else %}
                                             {% for i in chatroom_display %}
                                                 <div>
-                                                    <small><a href=""
+                                                    <small><a href="/users/{{ i['uid'] }}/profile"
                                                               class="has-text-weight-bold">{{ i["sender_name"] }}</a>
                                                         <span class="has-text-grey">
                                             {% if i["self"] %}
