--- a/templates/customer/checkout.html
+++ b/templates/customer/checkout.html
@@ -14,7 +14,7 @@
             <div class='card has-text-centered'>
                 <div class='section'>
                     <div class="container">
-                        <h1 class='title has-text-centered'>Amount: ${{ amount }}</h1>
+                        <h1 class='title has-text-centered'>Amount: ${{ '%0.2f'| format((amount)|float) }}</h1>
                         {% if customize == 1 %}
                             <h1 class='title has-text-centered'>Type: Customization Fee</h1>
                         {% else %}
