--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -24,7 +24,17 @@
                             </div>
                         </div>
                         <hr>
+                        <div class="level-left">
+                            <div class="level-item">
                         <h3 class="title is-4">Pricing</h3>
+                        </div>
+                        <div class="level-item">
+                        <button class="button is-white has-tooltip-multiline has-tooltip-right is-block"
+                        data-tooltip="This amount excludes the 5% commission fee that Tourisit accepts to sustain its services.">
+                    <i class="far fa-question-circle"></i>
+                        </div>
+                </button>
+                </div>
                         <p class="has-text-weight-light is-size-2 has-text-dark"><small class="is-size-5">From</small>
                             ${{ item.tour_price }}0
                         </p>
