labels to booknow

--- a/templates/customer/book-now.html
+++ b/templates/customer/book-now.html
@@ -83,7 +83,9 @@
                         {{ bookform.csrf_token }}
 
                         <div class='field'>
+                            <label class="label">Select Date</label>
                             <input name='book_day' type='date' id='day_selector' class='input'>
+                            <p class="help has-text-grey-light">Please select a valid date from tomorrow onwards.</p>
                         </div>
 
                         <div class="field">
