--- a/templates/onboarding/confirmaccType.html
+++ b/templates/onboarding/confirmaccType.html
@@ -36,7 +36,7 @@
                 <hr>
                 <div>
                     <h1 class="title is-5">Are you a licensed tour guide?</h1>
-                    <p><b>Increase your reputability and attractiveness:</b> You can approach our support desk to get verified.<br>This puts a badge next to your profile to let tourist know that you are a licensed tour guide.</p>
+                    <p><b>Increase your reputability and attractiveness:</b> You can approach our support desk to get verified.<br>This puts a badge next to your profile to let tourists know that you are a licensed tour guide.</p>
                 </div>
                 <hr>
                 <div>
